@@ -1,0 +1,22 @@
+<?php
+
+session_start();
+
+include __DIR__ . '/../config/cms-config.php';
+
+include __DIR__ . '/../include/pdo_db_functions.inc.php';
+include __DIR__ . '/../include/general_functions.inc.php';
+
+/* Überprüfen ob Login erfolgt ist, ggf. Anmeldemöglichkeit bieten */
+if (is_logged_in ()) {
+    $id      = filter_input(INPUT_POST, 'id');
+    $title   = filter_input(INPUT_POST, 'title');
+    $tagline = filter_input(INPUT_POST, 'tagline');
+    $content = filter_input(INPUT_POST, 'content');
+    $visible = filter_input(INPUT_POST, 'visible');
+
+    updatePageEntry($id, $title, $tagline, $content, $visible);
+    
+    header ( 'Location: index.php?uri=pages' );
+}
+
