@@ -8,7 +8,7 @@
 		</div>
 	</div>
 </div>
-<form action="siteupdate.php" method="post">
+<form action="pageupdate.php" method="post">
 	<div class="row">
 		<div class="col-lg-8 col-md-9 col-sm-9 col-xs-12">
 			<div class="form-group">
